--- a/assignments.html
+++ b/assignments.html
@@ -71,7 +71,7 @@
     <!-- Hamburger Menu Script -->
     <script>
       function openNav() {
-        document.getElementById("mySidepanel").style.width = "320px";
+        document.getElementById("mySidepanel").style.width = "100%";
       }
       
       function closeNav() {
