--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
     <!-- Hamburger Menu Script -->
     <script>
       function openNav() {
-        document.getElementById("mySidepanel").style.width = "414px";
+        document.getElementById("mySidepanel").style.width = "100%";
       }
       
       function closeNav() {
