--- a/grades.html
+++ b/grades.html
@@ -75,7 +75,7 @@
       </footer>
       <script>
         function openNav() {
-          document.getElementById("mySidepanel").style.width = "414px";
+          document.getElementById("mySidepanel").style.width = "100%";
         }
         
         function closeNav() {
