--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   </footer>
   <script>
     function openNav() {
-      document.getElementById("mySidepanel").style.width = "414px";
+      document.getElementById("mySidepanel").style.width = "100%";
     }
     
     function closeNav() {
