--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Hamburger Menu Script -->
     <script>
       function openNav() {
-        document.getElementById("mySidepanel").style.width = "414px";
+        document.getElementById("mySidepanel").style.width = "100%";
       }
       
       function closeNav() {
