--- a/assignments.html
+++ b/assignments.html
@@ -15,7 +15,7 @@
       <nav class="navbar">
         <button class="openbtn" onclick="openNav()">☰</button>
         <div id="mySidepanel" class="sidepanel">
-          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+          <a style="color: white;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
           <a href="contact.html">Contact</a>
           <a href="grades.html">Grades</a>
           <a href="assignments.html" class="active">Assignments</a>
