--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       <nav class="navbar">
         <button class="openbtn" onclick="openNav()">☰</button>
         <div id="mySidepanel" class="sidepanel">
-          <a style="color: white;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+          <a style="color: white;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">✖</a>
           <a href="contact.html">Contact</a>
           <a href="grades.html">Grades</a>
           <a href="assignments.html">Assignments</a>
@@ -42,10 +42,10 @@
     </section>
     <footer>
       <div class="icons">
-        <a href="https://www.facebook.com/lirim.av" target="_blank"><i class="fa fa-facebook">Facebook</i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram">Instagram</i></a>
-        <a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter">Twitter</i></a>
-        <a href="mailto:la60874@universum-ks.org"><i class="fa fa-envelope">Email</i></a>
+        <a href="https://www.facebook.com/lirim.av" target="_blank"><i class="fa fa-facebook"> Facebook</i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"> Instagram</i></a>
+        <a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"> Twitter</i></a>
+        <a href="mailto:la60874@universum-ks.org"><i class="fa fa-envelope"> Email</i></a>
     </div>
   </footer>
   <script>
