--- a/about.html
+++ b/about.html
@@ -25,11 +25,17 @@
       </nav>
     </header>
     <section class="sec1">
-      <center>
+      
       <h1 class="aboutme">About Me</h1>
+      <div class="img">
+        <center>
       <img src="Images/photo.jpg" alt="Profile Photo" class="profili"/>
+    </center>
+    </div>
+      <div class="textdiv">
+        <center>
       <p class="maintxt">
-        Hello and welcome to my website! Hey everyone! My name is Lirim Avdyli
+        Hello and welcome to my website! My name is Lirim Avdyli
         and this is a website dedicated to showcasing me and my work! Who am I?
         I am a first year student in Computer Science at Universum University. I
         live in Fushe Kosove.I love to be on the computer, I love anything that
@@ -39,6 +45,8 @@
         accomplishments and creativity with others.
       </p>
     </center>
+    </div>
+    
     </section>
     <footer>
       <div class="icons">
