--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
     <time>22/11/2021</time>
     <footer>
       <h1>Let's work together</h1>
+      <center>
       <div class="icons">
         <a href="https://www.facebook.com/lirim.av" target="_blank"><i class="fa fa-facebook"> Facebook</i></a>
         <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"> Instagram</i></a>
         <a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"> Twitter</i></a>
         <a href="mailto:la60874@universum-ks.org"><i class="fa fa-envelope"> Email</i></a>
       </div>
+    </center>
     </footer>
 
     <!-- Hamburger Menu Script -->
