--- a/assignments.html
+++ b/assignments.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <img src="Images/logo.png" alt="Logo" width="70" height="70" />
+    <img src="Images/logo.png" alt="Logo" width="70" height="70" class="logo" />
     <nav class="navbar">
       <button class="openbtn" onclick="openNav()">☰</button>
       <div id="mySidepanel" class="sidepanel">
