--- a/grades.html
+++ b/grades.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <img src="Images/logo.png" alt="Logo" height="70px" width="70px" />
+    <img src="Images/logo.png" alt="Logo" height="70px" width="70px" class="logo"/>
     <nav class="navbar">
       <button class="openbtn" onclick="openNav()">☰</button>
       <div id="mySidepanel" class="sidepanel">
