--- a/assignments.html
+++ b/assignments.html
@@ -14,6 +14,7 @@
 <body>
   <header>
     <img src="Images/logo.png" alt="Logo" width="70" height="70" class="logo" />
+    <!-- NavBar  --  SidePanel -->
     <nav class="navbar">
       <button class="openbtn" onclick="openNav()">☰</button>
       <div id="mySidepanel" class="sidepanel">
@@ -62,6 +63,7 @@
     </div>
   </section>
   <footer>
+    <!-- Social Media -->
     <div class="icons">
       <a href="https://www.facebook.com/lirim.av" target="_blank"><i class="fa fa-facebook"> Facebook</i></a>
       <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"> Instagram</i></a>
