--- a/grades.html
+++ b/grades.html
@@ -13,6 +13,7 @@
 <body>
   <header>
     <img src="Images/logo.png" alt="Logo" height="70px" width="70px" class="logo"/>
+    <!-- NavBar  --  SidePanel -->
     <nav class="navbar">
       <button class="openbtn" onclick="openNav()">☰</button>
       <div id="mySidepanel" class="sidepanel">
@@ -27,6 +28,7 @@
   </header>
   <section class="sec1">
     <h1 class="mainh">First year grades</h1>
+    <!-- Grades Table -->
     <table>
       <tbody>
         <tr>
@@ -68,6 +70,7 @@
     </table>
   </section>
   <footer>
+    <!-- Social Media -->
     <div class="icons">
       <a href="https://www.facebook.com/lirim.av" target="_blank"><i class="fa fa-facebook"> Facebook</i></a>
       <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"> Instagram</i></a>
