--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 <body>
   <header>
     <img src="Images/logo.png" alt="Logo" width="70px" height="70px" class="logo" />
+    <!-- NavBar  --  SidePanel -->
     <nav class="navbar">
       <button class="openbtn" onclick="openNav()">☰</button>
       <div id="mySidepanel" class="sidepanel">
@@ -26,6 +27,8 @@
       </div>
     </nav>
   </header>
+  
+  <!-- Contact Form -->
   <h1 class="mainh">Contact Me</h1>
   <section class="sec1">
     <center>
@@ -69,6 +72,7 @@
     </center>
   </section>
   <footer>
+    <!-- Social Media -->
     <div class="icons">
       <a href="https://www.facebook.com/lirim.av" target="_blank"><i class="fa fa-facebook"> Facebook</i></a>
       <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"> Instagram</i></a>
