--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <header>
     <img src="Images/logo.png" alt="Logo" height="70px" width="70px" class="logo" />
+    <!-- NavBar  --  SidePanel -->
     <nav class="navbar">
       <button class="openbtn" onclick="openNav()">☰</button>
       <div id="mySidepanel" class="sidepanel">
@@ -32,9 +33,10 @@
       <p style="color: #f5c701;">a web developer</p>
     </center>
   </section>
-  <time>22/11/2021</time>
+  <time>12/12/2021</time>
   <footer>
     <h1>Let's work together</h1>
+    <!-- Social Media -->
     <center>
       <div class="icons">
         <a href="https://www.facebook.com/lirim.av" target="_blank"><i class="fa fa-facebook"> Facebook</i></a>
