--- a/assignments.html
+++ b/assignments.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/assignmetns.css" />
   <link rel="icon" type="image/x-icon" href="Images/logo.png">
   <title>Assignments</title>
@@ -29,6 +32,7 @@
   </header>
   <section class="sec1">
     <h1 class="assign">Assignments</h1>
+    <center>
     <div class="butonat">
       <!-- Odin Project -->
       <div class="dropdown">
@@ -61,7 +65,33 @@
         </div>
       </div>
     </div>
+  </center>
+    <center>
+    <div class="h3">
+      <h3>Here you can find all of my Projects and my Homework.</h3>
+    </div>
+  </center>
   </section>
+  <div class="container">
+    <input type="radio" class="radio" name="progress" value="five" id="five">
+    <label for="five" class="label">5%</label>
+  
+    <input type="radio" class="radio" name="progress" value="twentyfive" id="twentyfive" >
+    <label for="twentyfive" class="label">25%</label>
+  
+    <input type="radio" class="radio" name="progress" value="fifty" id="fifty" checked>
+    <label for="fifty" class="label">50%</label>
+  
+    <input type="radio" class="radio" name="progress" value="seventyfive" id="seventyfive">
+    <label for="seventyfive" class="label">75%</label>
+  
+    <input type="radio" class="radio" name="progress" value="onehundred" id="onehundred">
+    <label for="onehundred" class="label">100%</label>
+  
+    <div class="progress">
+      <div class="progress-bar"></div>
+    </div>
+  </div>
   <footer>
     <!-- Social Media -->
     <div class="icons">
