--- a/assignments.html
+++ b/assignments.html
@@ -76,10 +76,10 @@
     <input type="radio" class="radio" name="progress" value="five" id="five">
     <label for="five" class="label">5%</label>
   
-    <input type="radio" class="radio" name="progress" value="twentyfive" id="twentyfive" >
+    <input type="radio" class="radio" name="progress" value="twentyfive" id="twentyfive" checked>
     <label for="twentyfive" class="label">25%</label>
   
-    <input type="radio" class="radio" name="progress" value="fifty" id="fifty" checked>
+    <input type="radio" class="radio" name="progress" value="fifty" id="fifty" >
     <label for="fifty" class="label">50%</label>
   
     <input type="radio" class="radio" name="progress" value="seventyfive" id="seventyfive">
