--- a/grades.html
+++ b/grades.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <img src="Images/logo.png" alt="Logo" height="70px" width="70px" class="logo"/>
+    <img src="Images/logo.png" alt="Logo" height="70px" width="70px" class="logo" />
     <!-- NavBar  --  SidePanel -->
     <nav class="navbar">
       <button class="openbtn" onclick="openNav()">☰</button>
@@ -29,6 +29,7 @@
   <section class="sec1">
     <h1 class="mainh">First year grades</h1>
     <!-- Grades Table -->
+    <center>
     <table>
       <tbody>
         <tr>
@@ -68,6 +69,7 @@
         </tr>
       </tbody>
     </table>
+  </center>
   </section>
   <footer>
     <!-- Social Media -->
