--- a/assignments.html
+++ b/assignments.html
@@ -43,6 +43,7 @@
             <a href="Odin Project/Landing Page Project/index.html">Landing Page Project</a>
             <a href="Odin project/rockpaperscissors/rockpaper.html">Rock Paper Scissors</a>
             <a href="Odin Project/etch a sketch/index.html">Etch a Sketch</a>
+            <a href="Odin Project/Calculator/index.html">Calculator</a>
           </div>
         </div>
         <!-- Chapters -->
@@ -61,8 +62,9 @@
         <div class="dropdown">
           <button class="dropbtn">Projects</button>
           <div class="dropdown-content">
-            <a href="Project 1 HTML/index.html">Project 1 HTML</a>
-            <a href="index.html">Project 2 CSS</a>
+            <a href="Project 1 HTML/index.html">Bio Website</a>
+            <a href="index.html">Bio Website ReDesign</a>
+            <a href="index.html">Bio Website Responsive</a>
           </div>
         </div>
       </div>
