--- a/grades.html
+++ b/grades.html
@@ -11,6 +11,9 @@
   <title>Grades</title>
 
 <body>
+  <video autoplay muted loop id="myVideo">
+    <source src="Images/video.mp4" type="video/mp4">
+  </video>
   <header>
     <img src="Images/logo.png" alt="Logo" height="70px" width="70px" class="logo" />
     <!-- NavBar  --  SidePanel -->
