--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <video autoplay muted loop id="myVideo">
+    <source src="Images/video.mp4" type="video/mp4">
+  </video>
   <header>
     <img src="Images/logo.png" alt="Logo" width="70px" height="70px" class="logo" />
     <!-- NavBar  --  SidePanel -->
