--- a/assignments.html
+++ b/assignments.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <video autoplay muted loop id="myVideo">
+  <video autoplay muted loop playsinline id="myVideo">
     <source src="Images/video.mp4" type="video/mp4">
   </video>
   <header>
