--- a/grades.html
+++ b/grades.html
@@ -11,7 +11,7 @@
   <title>Grades</title>
 
 <body>
-  <video autoplay muted loop id="myVideo">
+  <video autoplay muted loop playsinline id="myVideo">
     <source src="Images/video.mp4" type="video/mp4">
   </video>
   <header>
