--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
   <h1 class="mainh">Contact Me</h1>
   <section class="sec1">
     <center>
-      <form action="#" class="contform">
+      <form action="contact.php" class="contform">
         <div>
           <div class="fname">
             <label class="labelfl">First Name</label>
