--- a/assignments.html
+++ b/assignments.html
@@ -59,6 +59,7 @@
             <a href="Chapter 7/ls1.html">Ch7 Javascript</a>
             <a href="Chapter 8/ls1.html">Ch8 Javascript</a>
             <a href="Chapter 9/ls1.html">Ch9 Javascript</a>
+            <a href="Chapter 10/ls1.html">Ch10 Javascript</a>
           </div>
         </div>
         <!-- Projects -->
