--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
           I am a first year student in Computer Science at Universum University. I
           live in Fushe Kosove.I love to be on the computer, I love anything that
           comes around computers both hardware and software sides, I like playing
-          sports too like playing football,basketball etc.I dislike tomatoes,rainy
-          weather,and mean people. My goal for this website is to share my
+          sports too like playing football,basketball etc.I dont like tomatoes,rainy
+          weather,and lazy people. My goal for this website is to share my
           accomplishments and creativity with others.
         </p>
       </center>
