--- a/assignments.html
+++ b/assignments.html
@@ -47,6 +47,13 @@
             <a href="Odin project/rockpaperscissors/rockpaper.html">Rock Paper Scissors</a>
             <a href="Odin Project/etch a sketch/index.html">Etch a Sketch</a>
             <a href="Odin Project/Calculator/index.html">Calculator</a>
+            <a href="Odin Project/Library Project/index.html">Library Project</a>
+            <a href="Odin Project/TicTacToe/index.html">TicTacToe</a>
+            <a href="Odin Project/Restaurant Page/dist/index.html">Restaurant Page</a>
+            <a href="Odin Project/To Do List/index.html">To Do List</a>
+            <a href="Odin Project/Weather App/index.html">Weather App</a>
+            <a href="Odin Project/Testing Practice/arrayAnalysis.js">Testing Practice</a>
+            <a href="Odin Project/Battleship Project/index.html">Battleship Project</a>
           </div>
         </div>
         <!-- Chapters -->
@@ -72,6 +79,7 @@
             <a href="index.html">Bio Website ReDesign</a>
             <a href="index.html">Bio Website Responsive</a>
             <a href="Bootstrap Hobby_Organization Website/index.html">Bootstrap Hobby_Organization Website</a>
+            <a href="Bootstrap Multimedia Storytelling/Story Telling Project.mp4">Bootstrap Multimedia Storytelling</a>
           </div>
         </div>
       </div>
@@ -86,13 +94,13 @@
     <input type="radio" class="radio" name="progress" value="five" id="five">
     <label for="five" class="label">5%</label>
 
-    <input type="radio" class="radio" name="progress" value="twentyfive" id="twentyfive" checked>
+    <input type="radio" class="radio" name="progress" value="twentyfive" id="twentyfive">
     <label for="twentyfive" class="label">25%</label>
 
     <input type="radio" class="radio" name="progress" value="fifty" id="fifty">
     <label for="fifty" class="label">50%</label>
 
-    <input type="radio" class="radio" name="progress" value="seventyfive" id="seventyfive">
+    <input type="radio" class="radio" name="progress" value="seventyfive" id="seventyfive" checked>
     <label for="seventyfive" class="label">75%</label>
 
     <input type="radio" class="radio" name="progress" value="onehundred" id="onehundred">
