--- a/assignments.html
+++ b/assignments.html
@@ -79,7 +79,7 @@
             <a href="index.html">Bio Website ReDesign</a>
             <a href="index.html">Bio Website Responsive</a>
             <a href="Bootstrap Hobby_Organization Website/index.html">Bootstrap Hobby_Organization Website</a>
-            <a href="Bootstrap Multimedia Storytelling/Story Telling Project.mp4">Bootstrap Multimedia Storytelling</a>
+            <a href="Bootstrap Multimedia Storytelling/index.html">Bootstrap Multimedia Storytelling</a>
           </div>
         </div>
       </div>
