--- a/about.html
+++ b/about.html
@@ -42,12 +42,14 @@
     <div class="textdiv">
       <center>
         <p class="maintxt">
-          Hello and welcome to my website! My name is Lirim Avdyli
-          and this is a website dedicated to showcasing me and my work! Who am I?
-          I am a first year student in Computer Science at Universum University. I
-          live in Fushe Kosove.I love to be on the computer, I love anything that
-          comes around computers both hardware and software sides, I like playing
-          sports too like playing football,basketball etc. My goal for this website is to share my
+          Hello and welcome to my website! My name is Lirim Avdyli and here you will be 
+          able to know more about me and my work! Who am I?
+          I am a very dedicated first year Computer Science student, who loves
+          using technology in creating different tools that make our lives easier. Beginning
+          from each hardware piece and continuing to the software, everything about computers makes me eager
+          to learn, see, practice and love. I focus my vision on increasing my knowledge, and engaging 
+         on the projects and trainings that  
+          My goal for this website is to share my
           accomplishments and creativity with others.
         </p>
       </center>
