--- a/about.html
+++ b/about.html
@@ -48,8 +48,7 @@
           using technology in creating different tools that make our lives easier. Beginning
           from each hardware piece and continuing to the software, everything about computers makes me eager
           to learn, see, practice and love. I focus my vision on increasing my knowledge, and engaging 
-         on the projects and trainings that  
-          My goal for this website is to share my
+         on the projects and many trainings and my goal for this website is to share my
           accomplishments and creativity with others.
         </p>
       </center>
