--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <p style="color: #f5c701;">a web developer</p>
     </center>
   </section>
-  <time>12/12/2021</time>
+  <time id="timeD"></time><br>
+  <time id="dateD"></time>
   <footer>
     <h1>Let's work together</h1>
     <!-- Social Media -->
@@ -60,6 +61,7 @@
       document.getElementById("mySidepanel").style.width = "0";
     }
   </script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
