--- a/grades.html
+++ b/grades.html
@@ -15,7 +15,9 @@
     <source src="Images/video.mp4" type="video/mp4">
   </video>
   <header>
-    <img src="Images/logo.png" alt="Logo" height="70px" width="70px" class="logo" />
+    <div class="img-div">
+      <div class="img-wrapper">
+        <img src="Images/logo.png" alt="Logo" height="70px" width="70px" class="logo" /></div></div>
     <!-- NavBar  --  SidePanel -->
     <nav class="navbar">
       <button class="openbtn" onclick="openNav()">☰</button>
@@ -91,6 +93,17 @@
     function closeNav() {
       document.getElementById("mySidepanel").style.width = "0";
     }
+    let styleElem = document.head.appendChild(document.createElement("style"));
+    function change(){
+      // let colors = ["#fffff", "#f5c701"]
+      // let ranNum = Math.floor(Math.random() * 2);
+      let randNr = Math.floor(Math.random() *4000).toString(16);
+      randColor = "#" + randNr;
+      styleElem.innerHTML = ".img-wrapper::before {border-top-color: " + `${randColor}` + ";border-bottom-color: " + `${randColor}` + "}";
+    }
+    change();
+    setInterval(change, 800);
+
   </script>
 </body>
 
