--- a/assignments.html
+++ b/assignments.html
@@ -39,25 +39,25 @@
       <div class="butonat">
         <!-- Odin Project -->
         <div class="dropdown">
-          <button class="dropbtn">Odin Project</button>
+          <button class="dropbtn">Games/Programs</button>
           <div class="dropdown-content">
-            <a href="Odin Project/Odin Project homework.pdf">Q&A</a>
-            <a href="Odin Project/Recipe project/index.html">Recipe Project</a>
-            <a href="Odin Project/Landing Page Project/index.html">Landing Page Project</a>
+            <!-- <a href="Odin Project/Odin Project homework.pdf">Q&A</a> -->
+            <!-- <a href="Odin Project/Recipe project/index.html">Recipe Project</a> -->
+            <!-- <a href="Odin Project/Landing Page Project/index.html">Landing Page Project</a> -->
             <a href="Odin project/RockPaperScissors/index.html">Rock Paper Scissors</a>
-            <a href="Odin Project/etch a sketch/index.html">Etch a Sketch</a>
-            <a href="Odin Project/Calculator/index.html">Calculator</a>
-            <a href="Odin Project/Library Project/index.html">Library Project</a>
             <a href="Odin Project/TicTacToe/index.html">TicTacToe</a>
-            <a href="Odin Project/Restaurant Page/dist/index.html">Restaurant Page</a>
-            <a href="Odin Project/To Do List/index.html">To Do List</a>
-            <a href="Odin Project/Weather App/index.html">Weather App</a>
-            <a href="Odin Project/Testing Practice/arrayAnalysis.js">Testing Practice</a>
             <a href="Odin Project/Battleship Project/index.html">Battleship Project</a>
+            <a href="Odin Project/etch a sketch/index.html">Etch a Sketch</a>
+            <a href="Odin Project/To Do List/index.html">To Do List</a>
+            <a href="Odin Project/Library Project/index.html">Library Project</a>
+            <a href="Odin Project/Calculator/index.html">Calculator</a>
+            <a href="Odin Project/Restaurant Page/dist/index.html">Restaurant Page</a>
+            <a href="Odin Project/Weather App/index.html">Weather App</a>
+            <!-- <a href="Odin Project/Testing Practice/arrayAnalysis.js">Testing Practice</a> -->
           </div>
         </div>
         <!-- Chapters -->
-        <div class="dropdown">
+        <!-- <div class="dropdown">
           <button class="dropbtn">Chapters</button>
           <div class="dropdown-content">
             <a href="Chapters/Chapter 1-3/index.html">Ch1-3 HTML</a>
@@ -70,7 +70,7 @@
             <a href="Chapters/Chapter 11/ls1.html">Ch11 Javascript</a>
             <a href="Chapters/Chapter 12/ls1.html">Ch12 Javascript</a>
           </div>
-        </div>
+        </div> -->
         <!-- Projects -->
         <div class="dropdown">
           <button class="dropbtn">Projects</button>
@@ -79,14 +79,15 @@
             <a href="index.html">Bio Website ReDesign</a>
             <a href="index.html">Bio Website Responsive</a>
             <a href="Bootstrap Hobby_Organization Website/index.html">Bootstrap Hobby_Organization Website</a>
-            <a href="Bootstrap Multimedia Storytelling/index.html">Bootstrap Multimedia Storytelling</a>
+            <a href="UniTech/index.html">E-Commerce UniTech</a>
+            <!-- <a href="Bootstrap Multimedia Storytelling/index.html">Bootstrap Multimedia Storytelling</a> -->
           </div>
         </div>
       </div>
     </center>
     <center>
       <div class="h3">
-        <h3>Here you can find all of my Projects and my Homework.</h3>
+        <h3>Here you can find all of my Projects.</h3>
       </div>
     </center>
   </section>
