--- a/burger menu test/index.html
+++ b/burger menu test/index.html
@@ -14,6 +14,7 @@
             display: none;
             float: right;
             padding-right: 5%;
+            width: 0%;
         }
         button {
             float: left;
@@ -46,6 +47,8 @@
             if (lista.style.display === "none"){
                 lista.style.display="inline";
                 a.style.color="#"+ y;
+                lista.style.width = "50%";
+                lista.style.scrollBehavior = "smooth";
             }
             else {
                 lista.style.display="none";
