--- a/assignments.html
+++ b/assignments.html
@@ -131,6 +131,7 @@
       document.getElementById("mySidepanel").style.width = "0";
     }
   </script>
+  <script src="js/js.js"></script>
 </body>
 
 </html>
