--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,7 @@
       document.getElementById("mySidepanel").style.width = "0";
     }
   </script>
+  <script src="js/js.js"></script>
 </body>
 
 </html>
