--- a/about.html
+++ b/about.html
@@ -73,6 +73,7 @@
       document.getElementById("mySidepanel").style.width = "0";
     }
   </script>
+  <script src="js/js.js"></script>
 </body>
 
 </html>
